<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardElevation="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_32sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_32sdp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_lan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_arabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/arabic"
                    android:drawableEnd="@drawable/ic_arabic"
                    android:textAllCaps="false"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:textColor="@color/text_color"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_lan" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_green"
                    android:drawableEnd="@drawable/ic_en"
                    android:text="@string/english"
                    android:textColor="@color/text_color"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_arabic"
                    app:layout_constraintTop_toTopOf="@id/btn_arabic" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_apply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:paddingVertical="8dp"
                    app:backgroundTint="@color/text_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:layout_constraintTop_toBottomOf="@id/btn_arabic"
                    app:cornerRadius="@dimen/_16sdp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>