<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />


        <variable
            name="loginViewModel"
            type="com.example.onx.app.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.ui.login.LoginFragment">



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/h_g1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".20" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/shap_login"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/ic_circle"
            app:layout_constraintBottom_toTopOf="@id/h_g1"
             app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/h_g2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".10" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@id/h_g1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/shap_login"
            app:layout_constraintTop_toBottomOf="@id/h_g2"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/login_lan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_language_24"
            app:layout_constraintBottom_toBottomOf="@id/shap_login"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintTop_toTopOf="parent"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/text_color"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_48sdp"
            app:layout_constraintTop_toBottomOf="@id/h_g1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/explain_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_32sdp"
            android:text="@string/login_explain_text"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_64sdp"
            app:endIconMode="custom"
            app:hintEnabled="false"
            android:minHeight="48dp"
            style="@style/OutlinedRoundedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/explain_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_id"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:gravity="center"
                android:padding="12dp"
                android:text="@={loginViewModel.userId}"
                android:background="@color/edit_text_color"
                style="@style/OutlinedRoundedBox"
                android:paddingHorizontal="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_16sdp"
            app:hintEnabled="false"
            android:minHeight="48dp"
            style="@style/OutlinedRoundedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_user_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:padding="12dp"
                android:gravity="center"
                android:text="@={loginViewModel.userPassword}"
                style="@style/OutlinedRoundedBox"
                android:background="@color/edit_text_color"

                android:paddingHorizontal="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="monospace"
            android:padding="@dimen/_16sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:backgroundTint="@color/text_color"
            android:textSize="@dimen/_18sdp"
            android:onClick="@{()->loginViewModel.checkUserLogin()}"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@id/layout_user_id"
            app:layout_constraintStart_toStartOf="@id/layout_user_id"
            app:layout_constraintTop_toBottomOf="@id/layout_password" />




        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/v_g1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".25" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/v_g2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".75" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/login_car_back"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/login_car_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/v_g1"
            app:layout_constraintEnd_toEndOf="@id/v_g2"
            app:layout_constraintTop_toBottomOf="@id/btn_login"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/login_car"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@drawable/login_car"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"/>


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:visibility="@{loginViewModel.progress_bar?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@={loginViewModel.errorMessage}"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="normal"
            android:visibility="@{loginViewModel.show_error?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>